Downsized profile.png, added icon, changed line of text

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Alex DeRodri</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" type="image/jpg" href="profile.png"/>
 </head>
 <body>
     <img src="profile.png" alt="Profile picture" id="profile">
@@ -18,7 +19,7 @@
     <p>this is very much still under construction as my knowledge of web development only goes so far and it is of utmost importance for me not to fail the classes i'm taking, which requires time and attention.</p>
     <div style="background-color:rgb(50, 81, 102);">
         <p><b>here is some information about me:</b></p><ul>
-            <li>i study comp. sci. and engineering at tec de monterrey</li>
+            <li>i study computer science and engineering at tec de monterrey</li>
             <lI>english, spanish and french are the languages i can speak fluently</lI>
             <li>i'm in love mathematics and lower case</li>
         </ul>
