Update color scheme

--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
 
     <div style="height: 25px;"></div>
 
-    <h1>welcome to alex derodri's personal website!</h1>
+    <h1>welcome to alex derodri's <br/>
+        personal website!</h1>
 
     <div style="height: 10px;"></div>
 
