--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div style="height: 10px;"></div>
 
     <p>this is very much still under construction as my knowledge of web development only goes so far and it is of utmost importance for me not to fail the classes i'm taking, which requires time and attention.</p>
-    <div style="background-color:rgb(50, 81, 102);">
+    <div id="facts"style="background-color:rgb(50, 81, 102);">
         <p><b>here is some information about me:</b></p><ul>
             <li>i study computer science and engineering at tec de monterrey</li>
             <lI>english, spanish and french are the languages i can speak fluently</lI>
