Added LinkedIn logo and link to profile

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div style="height: 10px;"></div>
 
     <p>this is very much still under construction as my knowledge of web development only goes so far and it is of utmost importance for me not to fail the classes i'm taking, which requires time and attention.</p>
-    <div id="facts"style="background-color:rgb(50, 81, 102);">
+    <div id="facts">
         <p><b>here is some information about me:</b></p><ul>
             <li>i study computer science and engineering at tec de monterrey</li>
             <lI>english, spanish and french are the languages i can speak fluently</lI>
@@ -28,6 +28,7 @@
     <p style="text-align: center;">you can find me on:</p>
     <div style="text-align: center;">
         <a href="https://twitter.com/alexderodri" target="_blank"><img src="twitter.png" alt="Twitter logo" class="social-media"></a>
+        <a href="https://www.linkedin.com/in/l-alejandro-rodriguez/" target="_blank"><img src="linkedin.png" alt="LinkedIn logo" class="social-media"></a>
         <a href="https://github.com/alexderodri" target="_blank"><img src="github.png" alt="GitHub logo" class="social-media"></a>
         <a href="https://instagram.com/alexderodri" target="_blank"><img src="instagram.png" alt="Instagram logo" class="social-media"></a>
         <a href="https://youtube.com/alexderodri" target="_blank"><img src="youtube.png" alt="YouTube logo" class="social-media"></a>
