Resized empty divs so no scrolling was needed (in general)

--- a/index.html
+++ b/index.html
@@ -8,24 +8,25 @@
     <link rel="shortcut icon" type="image/jpg" href="profile.png"/>
 </head>
 <body>
+    <div style="height: 20px;"></div>
+
     <img src="profile.png" alt="Profile picture" id="profile">
 
-    <div style="height: 25px;"></div>
+    <!-- <div style="height: 25px;"></div> -->
 
-    <h1>welcome to alex derodri's <br/>
-        personal website!</h1>
+    <h1>Hi there!</h1>
 
-    <div style="height: 10px;"></div>
+    <!-- <div style="height: 10px;"></div> -->
 
-    <p>this is very much still under construction as my knowledge of web development only goes so far and it is of utmost importance for me not to fail the classes i'm taking, which requires time and attention.</p>
+    <p>This is still under construction as my web dev skills only go so far and I don't want to distract myself too much and fail my classes.</p>
     <div id="facts">
-        <p><b>here is some information about me:</b></p><ul>
-            <li>i study computer science and engineering at tec de monterrey</li>
-            <lI>english, spanish and french are the languages i can speak fluently</lI>
-            <li>i'm in love mathematics and lower case</li>
+        <p><b>In the meantime, here are some facts about me:</b></p><ul>
+            <li>I study Computer Science and Engineering at Tec de Monterrey</li>
+            <lI>English, Spanish and French are the languages I can speak fluently</lI>
+            <li>I'm in love mathematics</li>
         </ul>
     </div>
-    <p style="text-align: center;">you can find me on:</p>
+    <p style="text-align: center;">You can find me on:</p>
     <div style="text-align: center;">
         <a href="https://twitter.com/alexderodri" target="_blank"><img src="twitter.png" alt="Twitter logo" class="social-media"></a>
         <a href="https://www.linkedin.com/in/derodri" target="_blank"><img src="linkedin.png" alt="LinkedIn logo" class="social-media"></a>
