Fixed grammatical mistake

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <p><b>In the meantime, here are some facts about me:</b></p><ul>
             <li>I study Computer Science and Engineering at Tec de Monterrey</li>
             <lI>English, Spanish and French are the languages I can speak fluently</lI>
-            <li>I'm in love mathematics</li>
+            <li>I'm in love with mathematics</li>
         </ul>
     </div>
     <p style="text-align: center;">You can find me on:</p>
