--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <p style="text-align: center;">You can find me on:</p>
     <div style="text-align: center;">
         <a href="https://twitter.com/alexderodri" target="_blank"><img src="twitter.png" alt="Twitter logo" class="social-media"></a>
-        <a href="https://www.linkedin.com/in/derodri" target="_blank"><img src="linkedin.png" alt="LinkedIn logo" class="social-media"></a>
+        <a href="https://www.linkedin.com/in/alexderodri" target="_blank"><img src="linkedin.png" alt="LinkedIn logo" class="social-media"></a>
         <a href="https://github.com/alexderodri" target="_blank"><img src="github.png" alt="GitHub logo" class="social-media"></a>
         <a href="https://instagram.com/alexderodri" target="_blank"><img src="instagram.png" alt="Instagram logo" class="social-media"></a>
         <a href="https://youtube.com/alexderodri" target="_blank"><img src="youtube.png" alt="YouTube logo" class="social-media"></a>
