Changed head title, added name below profile picture

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Alex DeRodri</title>
+    <title>Luis Alejandro DeRodri</title>
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" type="image/jpg" href="profile.png"/>
 </head>
@@ -13,6 +13,11 @@
     <img src="profile.png" alt="Profile picture" id="profile">
 
     <!-- <div style="height: 25px;"></div> -->
+
+    <p style="text-align: center; font-size: 0.75em;">
+        <i>Luis Alejandro DeRodri<br>
+            (or just Alex)</i>
+    </p>
 
     <h1>Hi there!</h1>
 
