--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <a href="https://instagram.com/alexderodri" target="_blank"><img src="instagram.png" alt="Instagram logo" class="social-media"></a>
         <a href="https://youtube.com/alexderodri" target="_blank"><img src="youtube.png" alt="YouTube logo" class="social-media"></a>
     </div>
-    <p style="text-align: center;"><a href="mailto:hello@alexderodri.com" id="mail">hello@alexderodri.com</a></p>
+    <p style="text-align: center;"><a href="mailto:alex@derodri.com" id="mail">alex@derodri.com</a></p>
 
 </body>
 </html>
