Updated title and body text

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Luis Alejandro DeRodri</title>
+    <title>Alex DeRodri</title>
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" type="image/jpg" href="profile.png"/>
 </head>
@@ -14,23 +14,21 @@
 
     <!-- <div style="height: 25px;"></div> -->
 
-    <p style="text-align: center; font-size: 0.75em;">
-        <i>Luis Alejandro DeRodri<br>
-            (or just Alex)</i>
-    </p>
-
     <h1>Hi there!</h1>
 
     <!-- <div style="height: 10px;"></div> -->
-
-    <p>This is still under construction as my web dev skills only go so far and I don't want to distract myself too much and fail my classes.</p>
+    <p>This is still under construction as most of my time is consumed by university.</p>
+    <p><b>In the meantime, here's some facts about me:</b></p>
     <div id="facts">
-        <p><b>In the meantime, here are some facts about me:</b></p><ul>
-            <li>I study Computer Science and Engineering at Tec de Monterrey</li>
-            <lI>English, Spanish and French are the languages I can speak fluently</lI>
-            <li>I'm in love with mathematics</li>
+        <ul>
+            <li>I study Computer Science at Tec de Monterrey 👨🏽‍💻</li>
+            <li>My name is Luis Alejandro Rodriguez</li>
+            <li>You can find me online as Alex DeRodri</li>
+            <lI>I'm fluent in English 🇺🇸, Spanish 🇲🇽 and French 🇫🇷</li>
+            <li>Math interests me 🧮</li>
         </ul>
     </div>
+
     <p style="text-align: center;">You can find me on:</p>
     <div style="text-align: center;">
         <a href="https://twitter.com/alexderodri" target="_blank"><img src="twitter.png" alt="Twitter logo" class="social-media"></a>
