Updated facts section

--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
     <p><b>In the meantime, here's some facts about me:</b></p>
     <div id="facts">
         <ul>
-            <li>I study Computer Science at Tec de Monterrey 👨🏽‍💻</li>
+            <li>I study Computer Science & Eng. at Tec de Monterrey 👨🏽‍💻</li>
             <li>My name is Luis Alejandro Rodriguez</li>
             <li>You can find me online as Alex DeRodri</li>
             <lI>I'm fluent in English 🇺🇸, Spanish 🇲🇽 and French 🇫🇷</li>
-            <li>Math interests me 🧮</li>
+            <li>I find Math very interesting 🧮</li>
         </ul>
     </div>
 
