--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
     <p><b>In the meantime, here's some facts about me:</b></p>
     <div id="facts">
         <ul>
-            <li>I study Computer Science & Eng. at Tec de Monterrey 👨🏽‍💻</li>
-            <li>My name is Luis Alejandro Rodriguez</li>
-            <li>You can find me online as Alex DeRodri</li>
+            <li>My name is <i class="text-highlight">Luis Alejandro Rodriguez</i></li>
+            <li>You can find me online as <i class="text-highlight">Alex DeRodri</i></li>
+            <li>I study <b class="text-highlight">Computer Science & Eng.</b> at Tec de Monterrey 👨🏽‍💻</li>
             <lI>I'm fluent in English 🇺🇸, Spanish 🇲🇽 and French 🇫🇷</li>
             <li>I find Math very interesting 🧮</li>
         </ul>
